// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Git Sync - entity tab rendering landing view 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main bodyContainer"
    >
      <div
        class="StyledProps--font StyledProps--main collapseFeatures"
      >
        <div
          class="Collapse--main"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeader"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                data-icon="main-chevron-right"
              >
                <svg
                  height="16"
                  viewBox="0 0 8 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main header StyledProps--flex"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-left-small StyledProps--color StyledProps--color-primary7 StyledProps--inline"
                >
                  gitSyncRepoTest
                </span>
                <div
                  class="OverlaySpinner--overlaySpinner"
                >
                  <form
                    action="#"
                    class="FormikForm--main"
                  >
                    <div>
                      <div
                        class="bp3-form-group"
                        data-id="branch-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="git-new-branch"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 13 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="- Select -"
                                  style="padding-right: 0px; padding-left: 0px;"
                                  type="text"
                                  value="master"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                    icon="chevron-down"
                                  >
                                    <svg
                                      data-icon="chevron-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        chevron-down
                                      </desc>
                                      <path
                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main collapseFeatures"
      >
        <div
          class="Collapse--main"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeader"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                data-icon="main-chevron-right"
              >
                <svg
                  height="16"
                  viewBox="0 0 8 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main header StyledProps--flex"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-left-small StyledProps--color StyledProps--color-primary7 StyledProps--inline"
                >
                  gitSyncRepo
                </span>
                <div
                  class="OverlaySpinner--overlaySpinner"
                >
                  <form
                    action="#"
                    class="FormikForm--main"
                  >
                    <div>
                      <div
                        class="bp3-form-group"
                        data-id="branch-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="git-new-branch"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 13 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="- Select -"
                                  style="padding-right: 0px; padding-left: 0px;"
                                  type="text"
                                  value="feature"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                    icon="chevron-down"
                                  >
                                    <svg
                                      data-icon="chevron-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        chevron-down
                                      </desc>
                                      <path
                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - entity tab rendering summary view of a gitSyncRepo  1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-small"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Pipelines
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color"
                    data-icon="pipeline-ng"
                  >
                    <svg
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#25A6F7"
                      >
                        <path
                          d="M17.857 2.705h-3.672a2.85 2.85 0 00-5.614.714 2.85 2.85 0 005.614.714h3.672c.395 0 .714.32.714.715v6.428c0 .395-.32.714-.714.714h-6.786a.714.714 0 100 1.429h6.786c1.184 0 2.143-.96 2.143-2.143V4.848c0-1.184-.96-2.143-2.143-2.143zM11.43 4.848a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                        <path
                          d="M17.143 14.848c-1.28 0-2.352.848-2.715 2.01H7.143a.711.711 0 01-.709-.685 2.85 2.85 0 00-.72-5.611 2.844 2.844 0 00-2.46 1.428H2.143a.714.714 0 01-.714-.714V4.848c0-.395.32-.715.714-.715h4.643a.714.714 0 000-1.428H2.143C.959 2.705 0 3.665 0 4.848v6.428c0 1.184.96 2.143 2.143 2.143h.714a2.85 2.85 0 002.147 2.757 2.14 2.14 0 002.139 2.11h7.203a2.857 2.857 0 102.797-3.438zM4.286 13.419a1.429 1.429 0 112.858 0 1.429 1.429 0 01-2.858 0zm12.857 5.714a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    pipelineOne
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  pipelineOne
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Connectors
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            4
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color"
                    data-icon="connectors-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 53 70"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 56.5c-3 .5-7.5-2-7-2m7 2c15 0 12-25.5 12-40l5 4-6.5-19-9 19 6-4s-.628 37-7.5 40z"
                        stroke="#445EE9"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M47 58.996c-6.5-9.5-18-11.5-33.5-3 20-6.605 30.717 4.66 30.717 4.66h-8L52 68.496l-.783-16-4.217 6.5z"
                        stroke="#445EE9"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    Connector One
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  ConnectorOne
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/abc.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/abc.yaml
                  </p>
                </a>
              </div>
            </div>
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color"
                    data-icon="connectors-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 53 70"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 56.5c-3 .5-7.5-2-7-2m7 2c15 0 12-25.5 12-40l5 4-6.5-19-9 19 6-4s-.628 37-7.5 40z"
                        stroke="#445EE9"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M47 58.996c-6.5-9.5-18-11.5-33.5-3 20-6.605 30.717 4.66 30.717 4.66h-8L52 68.496l-.783-16-4.217 6.5z"
                        stroke="#445EE9"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    dailyTestOne
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  dailyTestOne
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/dailyTestOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/dailyTestOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--padding-left-huge StyledProps--padding-bottom-large"
          style="cursor: pointer;"
        >
          gitsync.seeMore
        </p>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            FeatureFlags
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color"
                    data-icon="cf-main"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.464 1.316a.2.2 0 00.207-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.397 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012L10.633 2.08z"
                        fill="url(#cf-main_svg__a)"
                      />
                      <path
                        d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.266.902z"
                        fill="url(#cf-main_svg__b)"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cf-main_svg__a"
                          x1="6.837"
                          x2="23.78"
                          y1="2"
                          y2="28.227"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cf-main_svg__b"
                          x1="6.837"
                          x2="23.78"
                          y1="2"
                          y2="28.227"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    featureFlags
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  featureFlags
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/featureflags.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/featureflags.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - entity tab rendering summary view of a gitSyncRepo  2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-small"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Pipelines
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color"
                    data-icon="pipeline-ng"
                  >
                    <svg
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#25A6F7"
                      >
                        <path
                          d="M17.857 2.705h-3.672a2.85 2.85 0 00-5.614.714 2.85 2.85 0 005.614.714h3.672c.395 0 .714.32.714.715v6.428c0 .395-.32.714-.714.714h-6.786a.714.714 0 100 1.429h6.786c1.184 0 2.143-.96 2.143-2.143V4.848c0-1.184-.96-2.143-2.143-2.143zM11.43 4.848a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                        <path
                          d="M17.143 14.848c-1.28 0-2.352.848-2.715 2.01H7.143a.711.711 0 01-.709-.685 2.85 2.85 0 00-.72-5.611 2.844 2.844 0 00-2.46 1.428H2.143a.714.714 0 01-.714-.714V4.848c0-.395.32-.715.714-.715h4.643a.714.714 0 000-1.428H2.143C.959 2.705 0 3.665 0 4.848v6.428c0 1.184.96 2.143 2.143 2.143h.714a2.85 2.85 0 002.147 2.757 2.14 2.14 0 002.139 2.11h7.203a2.857 2.857 0 102.797-3.438zM4.286 13.419a1.429 1.429 0 112.858 0 1.429 1.429 0 01-2.858 0zm12.857 5.714a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    pipelineOne
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  pipelineOne
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Connectors
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            4
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-small"
        >
          <div
            class="TableV2--table table"
          >
            <div
              class="TableV2--header"
              role="row"
            >
              <div
                class="TableV2--cell TableV2--sortable"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
                title="Toggle SortBy"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  NAME
                </p>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="TableV2--cell TableV2--sortable"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
                title="Toggle SortBy"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  IDENTIFIER
                </p>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="TableV2--cell TableV2--sortable"
                colspan="1"
                role="columnheader"
                style="width: 50%;"
                title="Toggle SortBy"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  PATH
                </p>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="TableV2--body"
            />
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-large StyledProps--color StyledProps--color-primary7"
          >
            gitsync.seeLess
          </p>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            FeatureFlags
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline StyledProps--color"
                    data-icon="cf-main"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.464 1.316a.2.2 0 00.207-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.397 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012L10.633 2.08z"
                        fill="url(#cf-main_svg__a)"
                      />
                      <path
                        d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.266.902z"
                        fill="url(#cf-main_svg__b)"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cf-main_svg__a"
                          x1="6.837"
                          x2="23.78"
                          y1="2"
                          y2="28.227"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="cf-main_svg__b"
                          x1="6.837"
                          x2="23.78"
                          y1="2"
                          y2="28.227"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    featureFlags
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  featureFlags
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/featureflags.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/featureflags.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
